--- a/package.json
+++ b/package.json
@@ -1,30 +1,16 @@
 {
-    "name": "clickatell-node",
-    "version": "0.0.2",
-    "description": "Library for Clickatell SMS gateway APIs",
-    "author": "Chris Brand <chris@cainsvault.com> (http://www.cainsvault.com/)",
-    "main": "./src/index.js",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/arcturial/clickatell-node.git"
-    },
-    "bugs": {
-        "url": "https://github.com/arcturial/clickatell-node/issues"
-    },
-    "keywords": [
-        "clickatell",
-        "api",
-        "sms"
-    ],
-    "license": "GNU",
-    "dependencies": {
-        "merge": "1.2.0"
-    },
-    "devDependencies": {
-        "mocha": "*",
-        "nock": "*"
-    },
-    "scripts": {
-        "test": "node node_modules/mocha/bin/mocha --recursive"
-    }
+  "name": "clickatell-platform",
+  "author": "Morne Zeelie <holla22@gmail.com>",
+  "description": "A simple NodeJs REST & HTTP interaction with Clickatell platform API",
+  "main": "index.js",
+  "version": "2.0.0",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/holla22/clickatell-platform.git"
+  },
+  "bugs": "https://github.com/holla22/clickatell-platform/issues",
+  "dependencies": {
+    "request": "^2.79.0"
+  }
 }
