--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "clickatell-platform",
-  "author": "Morne Zeelie <holla22@gmail.com>",
+  "author": "Morne Zeelie <morne.zeelie@clickatell.com>",
   "description": "A simple NodeJs REST & HTTP interaction with Clickatell platform API",
   "main": "index.js",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/holla22/clickatell-platform.git"
+    "url": "https://github.com/clickatell/clickatell-node.git"
   },
-  "bugs": "https://github.com/holla22/clickatell-platform/issues",
+  "bugs": "https://github.com/clickatell/clickatell-node/issues",
   "dependencies": {
+    "express": "^4.16.1",
+    "body-parser": "^1.18.2",
     "request": "^2.79.0"
   }
 }
